--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -102,6 +102,7 @@
                                     id="shorten-input" 
                                     name="shorten" 
                                     placeholder="my-custom-link"
+                                    required
                                 >
                             </div>
                             
